--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.474.0",
     "next": "16.0.4",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
+    "redux-saga": "^1.4.2",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
